--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ h4 { font-weight: 200; }
   background: url(../img/night-city.jpg);
   background-position: 0 -156px;
 }
-.bg:after {
+.bg:before {
   content: " ";
   display: block;
   position: absolute;
@@ -40,9 +40,48 @@ h4 { font-weight: 200; }
   left: 0;
   background: rgba(119, 68, 8, 0.44);
 }
+.bg:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 7em;
+  bottom: 0;
+  background: rgba(0,0,0,0.5);
+}
 .hero h1, .hero h4 {
   color: #fff;
   text-shadow: 0 0 1px rgba(0,0,0,1), 0 0 5px rgba(0,0,0,0.2);
+}
+.logos {
+  margin-top: 70px;
+  margin-bottom: 20px;
+  opacity: 0.8;
+}
+.logos h4 { margin-top: 0px; text-shadow: none; }
+.main { font-size: 18px; }
+.main ul { list-style: none; }
+.main li {
+    margin-bottom: 10px;
+}
+.main li:before {
+    content: " ";
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    background: #222;
+    border-radius: 100%;
+    margin-right: 0.7em;
+    margin-left: -1.7em;
+    position: relative;
+    top: 0.12em;
+    border: 0.25em solid #fff;
+    box-shadow: 0 0 1px #222;
+}
+
+.testimonial {
+  font-size: 18px;
+  margin: 10px 0 60px;
 }
 
 .panel .primary.button {
@@ -59,7 +98,7 @@ h4 { font-weight: 200; }
 
 .panel h3, .panel p, .panel label { color: #fff; }
 .panel button { border: 3px solid #fff; background: transparent; }
-.panel button:hover { background: rgba(255,255,255,0.2); }
+.panel button:hover, .panel button:focus { background: rgba(255,255,255,0.2); }
 
 input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="week"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], textarea{
   padding: 20px 0 20px 15px;
@@ -196,4 +235,13 @@ select {
     text-align: center;
     border-top-left-radius: 3px;
     border-bottom-left-radius: 3px;
+}
+
+footer {
+  padding: 20px 0;
+  border-top: 1px solid #efefef;
+}
+.copyright {
+  color: #aaa;
+  font-size: 12px;
 }
