--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,47 @@
 body, h1, h2, h3, h4, h5, h6, p {
   font-family: "Open Sans", sans;
+  color: #083E50;
 }
 
-body { font-weight: 300; }
+body { font-weight: 300; color: #083E50; }
 
 h1, h4 { color: #fff; text-align: center; }
 h1 { margin-top: 60px; }
 h1:after { content: " "; display: block; height: 3px; background: #fff; width: 40%; margin: 30px auto; }
 h3 { font-size: 26px; }
 h4 { font-weight: 200; }
+blockquote { border: none; }
+blockquote p { color: #083E50; }
+blockquote cite { color: #4B7A8A; }
+blockquote .photo {
+  position: relative;
+  overflow: hidden;
+  width: 4em;
+  height: 4em;
+  border-radius: 100%;
+  margin: -0.5em auto 0.5em;
+}
+
+.text-separator {
+  margin: 60px 0;
+  text-align: center;
+  text-transform: uppercase;
+  position: relative;
+}
+.text-separator:before {
+  content: " ";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 1px;
+  background: #083E50;
+  top: 0.65em;
+}
+.text-separator span {
+  position: relative;
+  background: #fff;
+  padding: 0 0.5em;
+}
 
 .logo {
   height: 60px;
@@ -16,7 +49,6 @@ h4 { font-weight: 200; }
 }
 
 .phone {
-  color: rgb(108, 86, 59);
   color: rgb(0, 115, 154);
   margin-top: 20px;
 }
@@ -27,11 +59,11 @@ h4 { font-weight: 200; }
 .bg {
   position: absolute;
   width: 100%;
-  height: 20em;
+  height: 30.5em;
   background: url(../img/night-city.jpg);
   background-position: 0 -156px;
 }
-.bg:before {
+.bg:before, .photo:after {
   content: " ";
   display: block;
   position: absolute;
@@ -39,46 +71,31 @@ h4 { font-weight: 200; }
   height: 100%;
   top: 0;
   left: 0;
-  background: rgba(8, 83, 119, 0.44);
+  background: rgba(16, 66, 90, 0.44);
 }
-.bg:after {
-  content: " ";
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 4em;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
-  box-shadow: 0 -59px 65px 12px rgba(0, 0, 0, 0.5);
+.photo:after {
+  background: rgba(16, 66, 90, 0.12);
 }
-.hero h1 {
-  font-size: 1.8em;
-  margin: 1em auto;
-  max-width: 12em;
-}
-.hero h4 {
-  padding: 0 2%;
-  font-size: 1.1em;
-  max-width: 30em;
-  margin: 0 auto;
+.hero {
+  min-height: 24.5em;
 }
 .hero h1, .hero h4 {
   color: #fff;
   text-shadow: 0 0 1px rgba(0,0,0,1), 0 0 5px rgba(0,0,0,0.2);
 }
 .logos {
-  margin-top: 40px;
-  margin-bottom: 20px;
-  opacity: 0.8;
+  margin: 60px 0 0;
+  padding: 60px 0 50px;
+  background: rgb(60,82,92);
 }
-.logos h4 {
-  margin-top: 0px;
-  text-shadow: none;
-  font-size: 1.2em;
+.logos h5 {
+  margin: 0 0 40px;
+  color: #fff;
+  text-transform: uppercase;
 }
 .main {
   font-size: 18px;
-  padding-top: .5em;
+  padding-top: 2em;
 }
 .main ul { list-style: none; }
 .main li {
@@ -89,19 +106,19 @@ h4 { font-weight: 200; }
     display: inline-block;
     width: 1em;
     height: 1em;
-    background: #222;
+    background: #083E50;
     border-radius: 100%;
     margin-right: 0.7em;
     margin-left: -1.7em;
     position: relative;
     top: 0.12em;
     border: 0.25em solid #fff;
-    box-shadow: 0 0 1px #222;
+    box-shadow: 0 0 1px #083E50;
 }
 
 .testimonial {
   font-size: 18px;
-  margin: 10px 0 60px;
+  margin: 10px 0 0;
 }
 
 .panel .primary.button {
@@ -113,7 +130,7 @@ h4 { font-weight: 200; }
   margin: 60px 0;
   border: none;
   background: #f7941d;
-  background: rgb(0,115,154);
+  background: rgb(43, 170, 213);
   color: #fff;
 }
 
@@ -260,36 +277,51 @@ select {
 
 footer {
   padding: 20px 0;
-  border-top: 1px solid #efefef;
+  background: rgb(18,40,50);
 }
 .copyright {
   color: #aaa;
   font-size: 12px;
 }
 
-
-@media only screen and (min-width: 768px) {
-  .main {
-    padding-top: 2em;
+@media only screen and (max-width: 768px) {
+  .bg {
+    height: 20em;
+  }
+  .hero {
+    min-height: 14.5em;
+  }
+  .panel {
+    margin: 10px 0;
   }
   .logos {
-    margin-top: 70px;
+    margin-top: 50px;
   }
-  .bg {
-    height: 29em;
+  .inplace-label .input:focus + label,
+  .inplace-label .input:active + label {
+      color: #fff;
+      text-shadow: 0 1px 0 rgba(19,74,70,.4);
+      background: rgba(122,184,147,1);
+      top: -4em;
+      left: 0;
+      text-align: center;
+      border-radius: 3px;
+      border-radius: 3px;
   }
-  .hero h1 {
-    font-size: 2.3em;
-    margin-top: 1.4em;
+  header .columns {
+    text-align: center !important;
   }
-  .hero h4 {
-    padding: 0%;
-    font-size: 1.35em;
+  .phone {
+    margin-bottom: 30px;
   }
-
+  .logo {
+    margin-top: 30px;
+  }
+  h4 { line-height: 1.3; }
 }
+
 @media only screen and (min-width: 1028px) {
-  .hero h4 {
-    padding: 0 5%;
+  .bg {
+    height: 30.5em;
   }
 }
